# gpxnicer

./: .gitignore  CMakeLists.txt  README.md
src/: gpxnicer.cpp
